[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookipedia_tools"
version = "0.0.1"
authors = [
  { name="CookieBox26", email="cookie-box@cookie-box.info" },
]
description = "Tools for Cookipedia."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
cpt = "cookipedia_tools.cli:main"
